@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-11T16:27:21Z",
-  "count_outdated" : 383,
-  "uniques_outdated" : 208,
-  "count" : 415,
+  "timestamp" : "2022-07-12T01:08:41Z",
+  "count_outdated" : 385,
+  "uniques_outdated" : 209,
+  "count" : 417,
   "uniques" : 225,
   "clones" : [
-    {
-      "timestamp": "2022-06-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-28T00:00:00Z",
       "count": 2,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-11T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
